--- a/.github/workflows/docker-release-arm.yml
+++ b/.github/workflows/docker-release-arm.yml
@@ -1,43 +1,52 @@
-name: Docker build and push voucher/vouch-proxy:latest-arm
+name: Publish Docker image to Ghcr.io
 
 on:
   push:
     branches:
       - master
+      - dev
+    tags:
+      - '*'
+
+env:
+  # Use docker.io for Docker Hub if empty
+  REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  publish-to-docker-arm:
+  publish-to-docker-ghcr:
     runs-on: ubuntu-latest
-    env:
-      DOCKER_TAG: latest-arm
+
     steps:
-      - name: Checkout
+      - name: Check out the repo
         uses: actions/checkout@v2
+
       - name: Set up Docker Buildx
-        id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker repository
+        uses: docker/login-action@v3
         with:
-          version: latest
-      - name: List available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }}
-      - name: Docker login (set DOCKER_USERNAME and DOCKER_PASSWORD in secrets)
-        if: ${{ success() && startsWith(github.repository, 'vouch/')}} # Remove this line, if you want everybody to publish to docker hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - name: Publish to docker as voucher/vouch-proxy
-        if: ${{ success() && startsWith(github.repository, 'vouch/')}}
-        run: |
-          docker buildx build \
-            --platform linux/arm/v7,linux/arm64 \
-            --push \
-            -t voucher/vouch-proxy:$DOCKER_TAG \
-            .
-    # Uncomment below to have github build to docker for every user. Watch out for indentation
-    #   -
-    #     name: Publish to docker as github_user/github_repo
-    #     if: ${{ success() && !startsWith(github.repository, 'vouch/')}}
-    #     run: |
-    #       docker buildx build \
-    #         --platform linux/amd64,linux/arm/v7,linux/arm64 \
-    #         --push \
-    #         -t $GITHUB_REPOSITORY:latest \
-    #         .
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+
+      - name: Build and push multi-arch Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
