--- a/.github/workflows/docker-release-arm.yml
+++ b/.github/workflows/docker-release-arm.yml
@@ -23,24 +23,27 @@ jobs:
           version: latest
       - name: List available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
-      - name: Docker login (set DOCKER_USERNAME and DOCKER_PASSWORD in secrets)
-        if: ${{ success() && startsWith(github.repository, 'vouch/')}} # Remove this line, if you want everybody to publish to docker hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - name: Publish to docker as voucher/vouch-proxy
-        if: ${{ success() && startsWith(github.repository, 'vouch/')}}
-        run: |
-          docker buildx build \
-            --platform linux/arm/v7,linux/arm64 \
-            --push \
-            -t voucher/vouch-proxy:$DOCKER_TAG \
-            .
-    # Uncomment below to have github build to docker for every user. Watch out for indentation
-    #   -
-    #     name: Publish to docker as github_user/github_repo
-    #     if: ${{ success() && !startsWith(github.repository, 'vouch/')}}
-    #     run: |
-    #       docker buildx build \
-    #         --platform linux/amd64,linux/arm/v7,linux/arm64 \
-    #         --push \
-    #         -t $GITHUB_REPOSITORY:latest \
-    #         .
+      - name: Log in to Docker repository
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+     
+      - name: Build and push Docker image using Dockerfile
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
