--- a/.github/workflows/docker-release-arm.yml
+++ b/.github/workflows/docker-release-arm.yml
@@ -8,6 +8,12 @@ on:
     tags:
       - '*'
 
+env:
+  # Use docker.io for Docker Hub if empty
+  REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   publish-to-docker-arm:
     runs-on: ubuntu-latest
@@ -23,6 +29,7 @@ jobs:
           version: latest
       - name: List available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
+        
       - name: Log in to Docker repository
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
