Reapply "Merge remote-tracking branch 'upstream/master'"
This reverts commit f14081dc03ea7fc9a35330f8068622e305741499.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ main
 config/config.yml
 config/*config.yml
 config/config.yml_*
+!config/config.yml_example_pocket-id
 config/google_config.json
 config/secret
 !config/testing/*
